Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,11 +36,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import numpy as np\n",
+    "\n",
+    "final = []\n",
+    "\n",
+    "for matrix in [0,1,2]:\n",
+    "    matrix = 10*(np.random.rand(5, 5)).round(1)\n",
+    "    final.append(matrix)\n",
+    "    \n",
+    "A,B,C = [final[i] for i in [0,1,2]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dot(B+C) == A.dot(B) + A.dot(C)"
    ]
   },
   {
@@ -53,11 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here "
+    "A.dot(B.dot(C)) == (A.dot(B)).dot(C)"
    ]
   },
   {
@@ -70,11 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       [ True, False, False, False, False],\n",
+       "       [False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here "
+    "A.dot(B) == B.dot(A)"
    ]
   },
   {
@@ -88,11 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here "
+    "import numpy as np\n",
+    "x = 10*np.random.rand(1,5).round(1).T\n",
+    "y = 10*np.random.rand(1,5).round(1).T\n",
+    "\n",
+    "(x.T).dot(y) == (y.T).dot(x)"
    ]
   },
   {
@@ -106,11 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9., 9., 1., 1., 3.],\n",
+       "       [6., 3., 4., 3., 7.],\n",
+       "       [4., 6., 9., 8., 9.],\n",
+       "       [2., 5., 3., 9., 8.],\n",
+       "       [3., 5., 6., 0., 7.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here "
+    "(A.dot(B)).T == (B.T)."
    ]
   },
   {
@@ -139,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
